src/test/resources/annotator/DuplicateFieldName.proto
syntax = "proto3";

package annotator;

message TestMessage {
    int32 <error descr="Duplicate field name: field">field</error> = 1;
    int32 <error descr="Duplicate field name: field">field</error> = 2;
}